# silver-octo-spork

./: README.md  docker-compose.yml  init_db.py  pytest.ini  requirements.txt  shards.json
app/: __init__.py  database.py  main.py
app/api/: router.py
app/core/: config.py  deps.py  security.py
app/ecosystem/: README.md  __init__.py  bootstrap.py  contracts.py  registry.py
app/enterprise/: README.md  __init__.py
app/events/: bus.py  handlers.py  registry.py  schemas.py
app/mega/: README.md  __init__.py
app/mobile/: README.md  __init__.py
app/models/: __init__.py  audit_root.py  base.py  notification.py  project.py  task.py  task_features.py  task_history.py  task_relation.py  team.py  team_member.py  token.py  user.py
app/schemas/: common.py
app/services/: ai_service.py  akashic.py  alien.py  analytics.py  apotheosis.py  ar.py  audit_utils.py  awakening.py  bci.py  burnout.py  (+64 more)
contracts/: MultiverseDAO.sol
grpc/: task_service.proto
microservices/: __init__.py
ml/: train_model.py
plugins/: priority_plugin.wat
tests/: test_advanced_modules.py  test_ai.py  test_beyond_hundred_modules.py  test_brainfuck_interpreter.py  test_event_bus.py  test_everything_modules.py  test_final_meta_modules.py  test_graph_and_audit.py  test_hundred_modules.py  test_meta_transcendence_modules.py  test_post_modules.py  test_tictactoe.py  test_transcendent_modules.py  test_ultimate_cycle_modules.py
tools/chip8_emulator/: .gitignore  CMakeLists.txt  README.md
tools/chip8_emulator/src/: chip8.cpp  chip8.hpp  main_sdl.cpp
tools/chip8_emulator/tests/: test_chip8.cpp
(+286 files in other folders)
